# fake_ncs

./: CMakeLists.txt  Kconfig.nrf  __ZEPHYR_DIFF  west.yml
cmake/: extensions.cmake
cmake/sysbuild/: image_signing.cmake
drivers/: CMakeLists.txt  Kconfig
lib/: CMakeLists.txt  Kconfig
lib/hw_unique_key/: Kconfig
scripts/: west-commands.yml
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: CMakeLists.txt  Kconfig
subsys/bootloader/: Kconfig
subsys/mpsl/: CMakeLists.txt  Kconfig
subsys/nrf_security/: CMakeLists.txt  Kconfig.psa
subsys/nrf_security/src/: CMakeLists.txt
sysbuild/: CMakeLists.txt  Kconfig.cracen  Kconfig.mcuboot  Kconfig.sysbuild
zephyr/: module.yml
